syntax = "proto3";

package proto;

import "serviceresponse.proto";

service Clusterrolebinding {
   rpc CreateClusterRoleBinding (ClusterRoleBinding) returns (ServiceResponse) {}
   rpc GetClusterRoleBinding (ClusterRoleBinding) returns (ServiceResponse) {}
   rpc DeleteClusterRoleBinding (ClusterRoleBinding) returns (ServiceResponse) {}
   rpc PatchClusterRoleBinding (ClusterRoleBinding) returns (ServiceResponse) {}
   rpc PutClusterRoleBinding (ClusterRoleBinding) returns (ServiceResponse) {}
}

message ClusterRoleBinding {
   string ProjectId = 1;
   string ServiceId = 2;
   string Name = 3;
   string ServiceType = 4;
   string ServiceSubType = 5;
   string Status = 6;
   string token = 7;
   repeated string ServiceDependencyInfo = 8;
   ClusterRoleBindingSvcAttr ServiceAttributes = 9;
   string company_id = 10;
}

message ClusterRoleBindingSvcAttr {
   repeated Subject Subjects = 1;
   RoleReference RoleReference =2;
}

message Subject {
   string Kind = 1;
   string Name = 2;
   string Namespace = 3;
}

message RoleReference {
   string ApiGroup = 1;
   string Kind = 2;
   string Name = 3;
}
